--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "@types/jsrsasign": "^10.5.14",
     "vite": "^5.4.1"
   },
   "dependencies": {
